adicionamos mais uma parte no texto no nosso codigo

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>aula 1</title>
 </head>
 <body>
-  
+<h1>minha primeira aula com mais um commit</h1> 
 </body>
-</html>
+</html>  
